# sofia_redux

./: .buildinfo  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGES.rst  CITATION  LICENSE.rst  MANIFEST.in  README.rst  changelog.html  codemeta.json  credits.html  environment.yml  freeze_requirements.txt  genindex.html  index.html  install.html  license.html  meta.yaml  objects.inv  optional_requirements.txt  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: ci_workflows.yml
_downloads/199c5c795da65e573a8f9164a63a89fa/: smooth-2.py
_downloads/2200aa5dd268b6e1f5dd2adb225acb91/: fitpeaks1d-9.py
_downloads/24120e03c0bac2183d1eac607904fc68/: filter-1.py
_downloads/2484c8ef55526480f6f3085bc72ca887/: fill-4.py
_downloads/2ab4add37686ee896fb4fcb811e512ea/: fitpeaks1d-5.py
_downloads/3d45eb6ea0556fbebd2ff346210f2f1f/: stats-1.py
_downloads/59c08823991424428fa160493e926e9e/: adjust-2.py
_downloads/5f8f791d5b23b1dfe7ab97bda73a220c/: adjust-3.py
_downloads/61574b1ac5ed24997a2b30fea1b066d1/: examples-4.py
_downloads/7b3941041bf2d8928d46e4ee02086a74/: fitpeaks1d-2.py
_downloads/830fbc60c778109f181850fdc531081c/: filter-3.py
_downloads/9697e08cc48e207dc1e989d9a7871662/: examples-1.py
_downloads/b1822f94507d3cff7fa5331e509ac3d9/: adjust-1.py
_downloads/b40b4ec42d88cfa42be80e7d87a65054/: interpolation-2.py
_downloads/de657c8bd2ae03cd00a699f004e79d8f/: smooth-1.py
_downloads/e0ade7a3260715253879715690919b8c/: polynomial-2.py
_downloads/f0eaa5f0b2f1e9f59d4dbf8b2a3dc680/: interpolation-1.py
_downloads/fd5bcfe07140c3bfe291b50d2ad77021/: combine-1.py
_modules/: index.html
_sources/api/: sofia_redux.calibration.pipecal_applyphot.pipecal_applyphot.rst.txt  sofia_redux.calibration.pipecal_calfac.pipecal_calfac.rst.txt  sofia_redux.calibration.pipecal_config.pipecal_config.rst.txt  sofia_redux.calibration.pipecal_config.read_respfile.rst.txt  sofia_redux.calibration.pipecal_error.PipeCalError.rst.txt  sofia_redux.calibration.pipecal_fitpeak.elliptical_gaussian.rst.txt  sofia_redux.calibration.pipecal_fitpeak.elliptical_lorentzian.rst.txt  sofia_redux.calibration.pipecal_fitpeak.elliptical_moffat.rst.txt  sofia_redux.calibration.pipecal_fitpeak.pipecal_fitpeak.rst.txt  sofia_redux.calibration.pipecal_photometry.pipecal_photometry.rst.txt  sofia_redux.calibration.pipecal_rratio.pipecal_rratio.rst.txt  sofia_redux.calibration.pipecal_util.add_calfac_keys.rst.txt  sofia_redux.calibration.pipecal_util.add_phot_keys.rst.txt  sofia_redux.calibration.pipecal_util.apply_fluxcal.rst.txt  sofia_redux.calibration.pipecal_util.apply_tellcor.rst.txt  sofia_redux.calibration.pipecal_util.average_alt.rst.txt  sofia_redux.calibration.pipecal_util.average_pwv.rst.txt  sofia_redux.calibration.pipecal_util.average_za.rst.txt  sofia_redux.calibration.pipecal_util.get_fluxcal_factor.rst.txt  sofia_redux.calibration.pipecal_util.get_tellcor_factor.rst.txt  sofia_redux.calibration.pipecal_util.guess_source_position.rst.txt  sofia_redux.calibration.pipecal_util.run_photometry.rst.txt  (+1224 more)
_static/: documentation_options.js  make_ico
api/: sofia_redux.calibration.pipecal_applyphot.pipecal_applyphot.html  sofia_redux.calibration.pipecal_calfac.pipecal_calfac.html  sofia_redux.calibration.pipecal_config.pipecal_config.html  sofia_redux.calibration.pipecal_config.read_respfile.html  sofia_redux.calibration.pipecal_error.PipeCalError.html  sofia_redux.calibration.pipecal_fitpeak.elliptical_gaussian.html  sofia_redux.calibration.pipecal_fitpeak.elliptical_lorentzian.html  sofia_redux.calibration.pipecal_fitpeak.elliptical_moffat.html  sofia_redux.calibration.pipecal_fitpeak.pipecal_fitpeak.html  sofia_redux.calibration.pipecal_photometry.pipecal_photometry.html  sofia_redux.calibration.pipecal_rratio.pipecal_rratio.html  sofia_redux.calibration.pipecal_util.add_calfac_keys.html  sofia_redux.calibration.pipecal_util.add_phot_keys.html  sofia_redux.calibration.pipecal_util.apply_fluxcal.html  sofia_redux.calibration.pipecal_util.apply_tellcor.html  sofia_redux.calibration.pipecal_util.average_alt.html  sofia_redux.calibration.pipecal_util.average_pwv.html  sofia_redux.calibration.pipecal_util.average_za.html  sofia_redux.calibration.pipecal_util.get_fluxcal_factor.html  sofia_redux.calibration.pipecal_util.get_tellcor_factor.html  sofia_redux.calibration.pipecal_util.guess_source_position.html  sofia_redux.calibration.pipecal_util.run_photometry.html  sofia_redux.calibration.standard_model.background.background_integrand_1.html  sofia_redux.calibration.standard_model.background.background_integrand_2.html  sofia_redux.calibration.standard_model.background.background_integrand_coeff.html  sofia_redux.calibration.standard_model.background.background_power.html  sofia_redux.calibration.standard_model.background.derive_background_photon_flux.html  sofia_redux.calibration.standard_model.background.integrand2.html  sofia_redux.calibration.standard_model.background.integrate_integrands.html  sofia_redux.calibration.standard_model.background.setup_integrands.html  sofia_redux.calibration.standard_model.calibration_io.calibration_data_path.html  sofia_redux.calibration.standard_model.calibration_io.generate_blackbody.html  sofia_redux.calibration.standard_model.calibration_io.generate_power_law.html  sofia_redux.calibration.standard_model.calibration_io.model_spectrum.html  sofia_redux.calibration.standard_model.calibration_io.open_outfile_and_header.html  sofia_redux.calibration.standard_model.calibration_io.plot_spectrum.html  sofia_redux.calibration.standard_model.calibration_io.read_atran.html  sofia_redux.calibration.standard_model.calibration_io.read_fits.html  sofia_redux.calibration.standard_model.calibration_io.read_text.html  sofia_redux.calibration.standard_model.calibration_io.report_result.html  (+1206 more)
docs/: README.md  changelog.rst  conf.py  credits.rst  index.rst  install.rst  license.rst
docs/bootstrap-sofia/: layout.html  (+1 more)
licenses/: LICENSE.rst
manuals/: index.html
sofia_redux/: _astropy_init.py  index.html
(+4470 files in other folders)
