[build-system]
requires = ["setuptools>=61.2",
            "setuptools_scm[toml]>=3.4.3",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "sofia_redux"
description = "SOFIA data reduction pipelines"
authors = [{name = "SOFIA-USRA", email = "mclarke@sofia.usra.edu"}]
license = {file = "LICENSE.rst"}
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "astropy>=5.1.1",
    "astroquery>=0.4.4",
    "bottleneck>=1.3.1",
    "cloudpickle>=1.6.0",
    "configobj>=5",
    "cycler>=0.10.0",
    "dill>=0.3",
    "graphviz>=0.16",
    "joblib>=0.14.1",
    "matplotlib>=3.3",
    "more-itertools>=8.5.0",
    "numba>=0.53.1",
    "numpy>=1.20.0",
    "pandas>=1.3",
    "photutils>=0.7.2",
    "psutil>=5.8.0",
    "regex>=2021.4.4",
    "scikit-learn>=0.22.1",
    "scipy>=1.4.1"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
readme = "README.rst"

[project.optional-dependencies]
test = [
    "pytest>=5.3.5",
    "pytest-astropy>=0.8.0",
    "pytest-astropy-header>=0.1.2",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-remotedata>=0.3.2",
    "pytest-timeout>=1.3.3",
    "ruff"
]
docs = [
    "sphinx-astropy>=1.2",
    "imageio>=2.9.0",
]
all = [
    "PyQt5>=5.9.2",
    "pytest-qt>=3.3.0"
]
display = [
    "pyds9>=1.8.1",
    "regions>=0.5"
]

[project.urls]
Homepage = "https://github.com/SOFIA-USRA/sofia_redux"

[project.scripts]
redux_pipe = "sofia_redux.pipeline.sofia.sofia_pipe:main"
redux = "sofia_redux.pipeline.sofia.sofia_app:main"
qad = "sofia_redux.pipeline.gui.qad.qad_app:main"
pipecal_applyphot = "sofia_redux.calibration.pipecal_applyphot:main"
hawc_calibration = "sofia_redux.calibration.standard_model.hawc_calibration:main"
eospec = "sofia_redux.visualization.controller:main"

[tool.setuptools.package-data]
"sofia_redux.calibration" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*"
]
"sofia_redux.calibration.tests" = ["data/*"]
"sofia_redux.calibration.standard_model.tests" = [
    "data/*",
    "outputs/*/*"
]
"sofia_redux.pipeline.gui" = [
    "designer/*",
    "designer/*/*",
    "designer/*/*/*",
    "designer/*/*/*/*"
]
"sofia_redux.pipeline.gui.qad" = ["designer/*"]
"sofia_redux.scan" = [
    "data/*",
    "data/*/*",
    "data/*/*/*"
]
"sofia_redux.spectroscopy.tests" = ["data/*"]
"sofia_redux.visualization" = [
    "data/*",
    "log.conf"
]
"sofia_redux.visualization.models.tests" = ["data/*"]
"sofia_redux.instruments.fifi_ls" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*"
]
"sofia_redux.instruments.flitecam" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*",
]
"sofia_redux.instruments.forcast" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*",
]
"sofia_redux.instruments.hawc" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
]
"sofia_redux.instruments.hawc.tests" = ["data/*"]


[tool.setuptools_scm]
write_to = "sofia_redux/version.py"

[tool.pytest.ini_options]
minversion = "2.2"
testpaths = ["sofia_redux"]
norecursedirs = [
    "build",
    "docs/_build"
]
astropy_header = "true"
text_file_format = "rst"
addopts = "-p no:warnings"
timeout = 1000

[tool.coverage.run]
source = ["sofia_redux",]
omit = [
    "sofia_redux/__init__*",
    "sofia_redux/_astropy_init*",
    "sofia_redux/*/_astropy_init*",
    "sofia_redux/*/*/_astropy_init*",
    "sofia_redux/conftest*",
    "sofia_redux/*/conftest*",
    "sofia_redux/*/*/conftest*",
    "sofia_redux/*/*/*/conftest*",
    "sofia_redux/*/tests/*",
    "sofia_redux/*/*/tests/*",
    "sofia_redux/*/*/*/tests/*",
    "sofia_redux/*/*/*/*/tests/*",
    "sofia_redux/version*",
    "sofia_redux/*/version*",
    "sofia_redux/*/*/version*",
    "sofia_redux/pipeline/gui/ui/*",
    "sofia_redux/pipeline/gui/qad/ui/*",
    "sofia_redux/visualization/display/ui/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "pragma: py{ignore_python_version}",
]
omit = [
    "sofia_redux/__init__*",
    "sofia_redux/_astropy_init*",
    "sofia_redux/*/_astropy_init*",
    "sofia_redux/*/*/_astropy_init*",
    "sofia_redux/conftest*",
    "sofia_redux/*/conftest*",
    "sofia_redux/*/*/conftest*",
    "sofia_redux/*/*/*/conftest*",
    "sofia_redux/*/tests/*",
    "sofia_redux/*/*/tests/*",
    "sofia_redux/*/*/*/tests/*",
    "sofia_redux/*/*/*/*/tests/*",
    "sofia_redux/version*",
    "sofia_redux/*/version*",
    "sofia_redux/*/*/version*",
    "sofia_redux/pipeline/gui/ui/*",
    "sofia_redux/pipeline/gui/qad/ui/*",
    "sofia_redux/visualization/display/ui/*"
]

[tool.ruff]
exclude = [
    "__init__.py",
    "version.py",
    "conf.py",
    "ui",
    "conftest.py"
]
ignore = ["E741", "E713"]
line-length = 80
select = ["E", "F", "W"]

[tool.ruff.pydocstyle]
convention = "numpy"
