[build-system]
requires = ["setuptools>=61.2",
            "setuptools_scm[toml]>=3.4.3",
            "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "sofia_redux"
description = "SOFIA data reduction pipelines"
authors = [{name = "SOFIA-USRA", email = "mclarke@sofia.usra.edu"}]
license = {file = "LICENSE.rst"}
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "astropy>=6.0.0",
    "astroquery>=0.4.6",
    "bottleneck>=1.3.7",
    "cloudpickle>=3.0.0",
    "configobj>=5.0.8",
    "cycler>=0.12.1",
    "dill>=0.3.7",
    "graphviz>=0.20.1",
    "joblib>=1.3.2",
    "matplotlib>=3.8.2",
    "more-itertools>=10.2.0",
    "numba>=0.58.1",
    "numpy>=1.26.3",
    "pandas>=2.2.0",
    "photutils>=1.10.0",
    "psutil>=5.9.8",
    "regex>=2023.12.25",
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
readme = "README.rst"

[project.optional-dependencies]
test = [
    "pytest>=7.4.4",
    "pytest-astropy>=0.11.0",
    "pytest-astropy-header>=0.2.2",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-remotedata>=0.4.1",
    "pytest-timeout>=2.2.0",
    "ruff"
]
docs = [
    "sphinx-astropy>=1.9.1",
    "imageio>=2.33.1",
]
all = [
    "PyQt5>=5.15.10",
    "pytest-qt>=4.3.1"
]
display = [
    "pyds9>=1.8.1",
    "regions>=0.5"
]

[project.urls]
Homepage = "https://github.com/SOFIA-USRA/sofia_redux"

[project.scripts]
redux_pipe = "sofia_redux.pipeline.sofia.sofia_pipe:main"
redux = "sofia_redux.pipeline.sofia.sofia_app:main"
qad = "sofia_redux.pipeline.gui.qad.qad_app:main"
pipecal_applyphot = "sofia_redux.calibration.pipecal_applyphot:main"
hawc_calibration = "sofia_redux.calibration.standard_model.hawc_calibration:main"
eospec = "sofia_redux.visualization.controller:main"

[tool.setuptools.package-data]
"sofia_redux.calibration" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*"
]
"sofia_redux.calibration.tests" = ["data/*"]
"sofia_redux.calibration.standard_model.tests" = [
    "data/*",
    "outputs/*/*"
]
"sofia_redux.pipeline.gui" = [
    "designer/*",
    "designer/*/*",
    "designer/*/*/*",
    "designer/*/*/*/*"
]
"sofia_redux.pipeline.gui.qad" = ["designer/*"]
"sofia_redux.scan" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*"
]
"sofia_redux.spectroscopy.tests" = ["data/*"]
"sofia_redux.visualization" = [
    "data/*",
    "log.conf"
]
"sofia_redux.visualization.models.tests" = ["data/*"]
"sofia_redux.instruments.fifi_ls" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*"
]
"sofia_redux.instruments.flitecam" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*",
]
"sofia_redux.instruments.forcast" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
    "data/*/*/*/*",
]
"sofia_redux.instruments.hawc" = [
    "data/*",
    "data/*/*",
    "data/*/*/*",
]
"sofia_redux.instruments.hawc.tests" = ["data/*"]


[tool.setuptools_scm]
write_to = "sofia_redux/version.py"

[tool.pytest.ini_options]
minversion = "2.2"
testpaths = ["sofia_redux"]
norecursedirs = [
    "build",
    "docs/_build"
]
astropy_header = "true"
text_file_format = "rst"
addopts = "-p no:warnings"
timeout = 1000

[tool.coverage.run]
source = ["sofia_redux",]
omit = [
    "sofia_redux/__init__*",
    "sofia_redux/_astropy_init*",
    "sofia_redux/*/_astropy_init*",
    "sofia_redux/*/*/_astropy_init*",
    "sofia_redux/conftest*",
    "sofia_redux/*/conftest*",
    "sofia_redux/*/*/conftest*",
    "sofia_redux/*/*/*/conftest*",
    "sofia_redux/*/tests/*",
    "sofia_redux/*/*/tests/*",
    "sofia_redux/*/*/*/tests/*",
    "sofia_redux/*/*/*/*/tests/*",
    "sofia_redux/version*",
    "sofia_redux/*/version*",
    "sofia_redux/*/*/version*",
    "sofia_redux/pipeline/gui/ui/*",
    "sofia_redux/pipeline/gui/qad/ui/*",
    "sofia_redux/visualization/display/ui/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "except ImportError",
    "raise AssertionError",
    "raise NotImplementedError",
    "def main(.*):",
    "pragma: py{ignore_python_version}",
]
omit = [
    "sofia_redux/__init__*",
    "sofia_redux/_astropy_init*",
    "sofia_redux/*/_astropy_init*",
    "sofia_redux/*/*/_astropy_init*",
    "sofia_redux/conftest*",
    "sofia_redux/*/conftest*",
    "sofia_redux/*/*/conftest*",
    "sofia_redux/*/*/*/conftest*",
    "sofia_redux/*/tests/*",
    "sofia_redux/*/*/tests/*",
    "sofia_redux/*/*/*/tests/*",
    "sofia_redux/*/*/*/*/tests/*",
    "sofia_redux/version*",
    "sofia_redux/*/version*",
    "sofia_redux/*/*/version*",
    "sofia_redux/pipeline/gui/ui/*",
    "sofia_redux/pipeline/gui/qad/ui/*",
    "sofia_redux/visualization/display/ui/*"
]

[tool.ruff]
exclude = [
    "__init__.py",
    "version.py",
    "conf.py",
    "ui",
    "conftest.py"
]
ignore = ["E741", "E713", "E721"]
line-length = 80
select = ["E", "F", "W"]

[tool.ruff.pydocstyle]
convention = "numpy"
