[metadata]
name = sofia_redux
author = SOFIA-USRA
author_email = mclarke@sofia.usra.edu
license = BSD 3-Clause
license_files = licenses/LICENSE.rst
url = https://github.com/SOFIA-USRA/sofia_redux
description = SOFIA data reduction pipelines
long_description = file: README.rst
long_description_content_type = text/x-rst
edit_on_github = False
github_project = SOFIA-USRA/sofia_redux
keywords = astronomy, astrophysics, space, science, sofia, observatory, infrared, imaging, spectroscopy, polarimetry
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires =
    astropy
    astroquery
    bottleneck
    configobj
    cycler
    dill
    joblib
    matplotlib
    more-itertools
    numba
    numpy
    pandas
    photutils
    scikit-image
    scikit-learn
    scipy

[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-mock
    pytest-timeout
docs =
    sphinx-astropy
    psutil
all =
    PyQt5
    pytest-qt
    pyds9
    regions

[options.entry_points]
console_scripts =
    redux_pipe = sofia_redux.pipeline.sofia.sofia_pipe:main
    redux = sofia_redux.pipeline.sofia.sofia_app:main
    qad = sofia_redux.pipeline.gui.qad.qad_app:main
    pipecal_applyphot = sofia_redux.calibration.pipecal_applyphot:main
    hawc_calibration = sofia_redux.calibration.standard_model.hawc_calibration:main
    eospec = sofia_redux.visualization.controller:main

[options.package_data]
sofia_redux.calibration =
    data/*
    data/*/*
    data/*/*/*
    data/*/*/*/*
sofia_redux.calibration.tests = data/*
sofia_redux.calibration.standard_model.tests =
    data/*
    outputs/*/*
sofia_redux.pipeline.gui =
    designer/*
    designer/*/*
    designer/*/*/*
    designer/*/*/*/*
sofia_redux.pipeline.gui.qad =
    designer/*
sofia_redux.spectroscopy.tests = data/*
sofia_redux.visualization =
    data/*
    log.conf
sofia_redux.visualization.models.tests =
    data/*
sofia_redux.instruments.fifi_ls =
    data/*
    data/*/*
    data/*/*/*
    data/*/*/*/*
sofia_redux.instruments.forcast =
    data/*
    data/*/*
    data/*/*/*
    data/*/*/*/*
sofia_redux.instruments.hawc =
    data/*
    data/*/*
    data/*/*/*
    data/*
    extern/*/*
    extern/*/*/*
    extern/*/*/*/*
    extern/*/*/*/*/*
    extern/*/*/*/*/*/*
    extern/*/*/*/*/*/*/*
    extern/*/*/*/*/*/*/*/*
    extern/*/*/*/*/*/*/*/*/*
sofia_redux.instruments.hawc.tests =
    data/*

[tool:pytest]
testpaths = "sofia_redux"
astropy_header = true
text_file_format = rst
addopts = -p no:warnings
timeout = 360

[coverage:run]
omit =
   sofia_redux/__init__*
   sofia_redux/_astropy_init*
   sofia_redux/*/_astropy_init*
   sofia_redux/*/*/_astropy_init*
   sofia_redux/conftest*
   sofia_redux/*/conftest*
   sofia_redux/*/*/conftest*
   sofia_redux/*/*/*/conftest*
   sofia_redux/*/tests/*
   sofia_redux/*/*/tests/*
   sofia_redux/*/*/*/tests/*
   sofia_redux/*/*/*/*/tests/*
   sofia_redux/version*
   sofia_redux/*/version*
   sofia_redux/*/*/version*
   sofia_redux/pipeline/gui/ui/*
   sofia_redux/pipeline/gui/qad/ui/*
   sofia_redux/visualization/display/ui/*

[coverage:report]
exclude_lines =
   # Have to re-enable the standard pragma
   pragma: no cover
   # Don't complain about packages we have installed
   except ImportError
   # Don't complain if tests don't hit assertions
   raise AssertionError
   raise NotImplementedError
   # Don't complain about script hooks
   def main\(.*\):
   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
   # Don't complain about IPython completion helper
   def _ipython_key_completions_

[flake8]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py,version.py,ui*.py,ui,tango_rc.py,redux_rc.py,__init__.py
ignore = W503
